--- a/BibliotekaMobilnaPWR/res/layout/komunikat_list_row.xml
+++ b/BibliotekaMobilnaPWR/res/layout/komunikat_list_row.xml
@@ -49,13 +49,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="2.91"
+        android:layout_weight="2.09"
         android:gravity="right"
         android:orientation="vertical" >
         
         <RelativeLayout
             android:id="@+id/usun_kom"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="25dp"
@@ -82,7 +82,7 @@
         
         <RelativeLayout
             android:id="@+id/edytuj_kom"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:layout_marginLeft="25dp"
