pierwsza część z tutorialem

--- a/BibliotekaMobilnaPWR/res/layout/activity_orders.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_orders.xml
@@ -1,9 +1,12 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background"
     android:orientation="vertical" >
-
+<LinearLayout 
+   android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="53dp" >
@@ -102,3 +105,11 @@
         android:background="@drawable/arrow_back" />
 
 </LinearLayout>
+<ImageView 
+    android:id="@+id/tutorial"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/tutorial8"/>
+
+</RelativeLayout>
