--- a/BibliotekaMobilnaPWR/res/layout/activity_zmiana_hasla.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_zmiana_hasla.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:orientation="vertical" >
+    
+    <LinearLayout 
+   android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -167,3 +172,11 @@
         android:background="@drawable/arrow_back" />
 
 </LinearLayout>
+<ImageView 
+    android:id="@+id/tutorial"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        android:src="@drawable/tutorial6"/>
+</RelativeLayout>
