--- a/BibliotekaMobilnaPWR/res/layout/activity_history.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_history.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    	android:orientation="vertical"
     android:background="@drawable/background" >
+    <LinearLayout 
+   android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
      <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="45px" >
-
+    
     <ImageView
         android:id="@+id/helpHistory"
         android:layout_width="45px"
@@ -69,3 +73,12 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/arrow_back" />
  </LinearLayout>
+<ImageView 
+    android:id="@+id/tutorial"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        android:src="@drawable/tutorial7"/>
+
+</RelativeLayout>
