--- a/BibliotekaMobilnaPWR/res/layout/activity_mkonto.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_mkonto.xml
@@ -1,10 +1,15 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
      android:background="@drawable/background"
     android:gravity="center" >
+    
+    <LinearLayout 
+   android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
     
     <RelativeLayout
     android:layout_width="match_parent"
@@ -268,3 +273,11 @@
         android:background="@drawable/arrow_back" />
 
 </LinearLayout>
+<ImageView 
+    android:id="@+id/tutorial"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        android:src="@drawable/tutorial5"/>
+</RelativeLayout>
