--- a/BibliotekaMobilnaPWR/res/layout/main.xml
+++ b/BibliotekaMobilnaPWR/res/layout/main.xml
@@ -1,9 +1,11 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout 
+   android:layout_width="match_parent"
     android:layout_height="match_parent"
-   
     android:orientation="vertical"
      android:background="@drawable/background"
     tools:context="com.example.bibliotekamobilnapwr.Main" >
@@ -113,7 +115,7 @@
         <Spinner
             android:id="@+id/spinner1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1" />
 
         <RelativeLayout
@@ -269,3 +271,12 @@
     </LinearLayout>
 
 </LinearLayout>
+
+<ImageView 
+    android:id="@+id/tutorial"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        android:src="@drawable/tutorial1"/>
+</RelativeLayout>
