--- a/BibliotekaMobilnaPWR/res/layout/komunikat.xml
+++ b/BibliotekaMobilnaPWR/res/layout/komunikat.xml
@@ -40,8 +40,15 @@
         android:id="@+id/comm_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/back_Komunikat"
         android:layout_below="@+id/relativeLayout1" >
-    </ListView>
 
+    </ListView>
+<ImageView
+     android:id="@+id/back_Komunikat"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_alignParentBottom="true"
+     android:layout_alignParentLeft="true"
+     android:background="@drawable/arrow_back" />
 </RelativeLayout>
