--- a/BibliotekaMobilnaPWR/res/layout/komunikat_list_row.xml
+++ b/BibliotekaMobilnaPWR/res/layout/komunikat_list_row.xml
@@ -7,7 +7,7 @@
     <LinearLayout 
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:orientation="vertical">
         <TextView 
             android:id="@+id/comm_title"
@@ -45,24 +45,53 @@
         
     </LinearLayout>
     
-    
-    <LinearLayout 
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
         android:gravity="right"
-        android:layout_gravity="center_vertical">
-        <Button 
-            android:id="@+id/comm_usun"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp" >
+        
+        <RelativeLayout
+            android:id="@+id/usun_kom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Usuń"/>
-        <Button 
-            android:id="@+id/comm_edytuj"
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:background="#00000000" >
+
+            <ImageView
+                android:id="@+id/usun_kom_icon"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/trash"
+                android:scaleType="fitXY" />
+
+        </RelativeLayout>
+        
+        <RelativeLayout
+            android:id="@+id/edytuj_kom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edytuj"/>
+            android:layout_marginBottom="15dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:background="#00000000" >
+
+            <ImageView
+                android:id="@+id/edytuj_kom_kom_icon"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/edit"
+                android:scaleType="fitXY" />
+
+
+        </RelativeLayout>
+        
     </LinearLayout>
 
 </LinearLayout>
