--- a/BibliotekaMobilnaPWR/res/layout/activity_orders.xml
+++ b/BibliotekaMobilnaPWR/res/layout/activity_orders.xml
@@ -107,6 +107,7 @@
 </LinearLayout>
 <ImageView 
     android:id="@+id/tutorial"
+    android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
